# star-stacker

./: .gitattributes  .gitignore  .lfsconfig  Abschlussprojekt  Cargo.toml  README.org
.github/workflows/: release.yml
src/: alignment.rs  image_loading.rs  lib.rs  main.rs  stacking.rs  star_detection.rs
star-stacker/: .gitignore  Cargo.toml
star-stacker/src/: alignment.rs  image_loading.rs  main.rs  stacking.rs  star_detection.rs
star-stacker/tests/: image_loading.rs
