[package]
name = "star-stacker"
version = "0.1.0"
edition = "2018"
authors = ["Lucas Sas Brunschier <lucassas@live.de>"]
homepage = "https://github.com/SirBubbls/star-stacker"
repository = "https://github.com/SirBubbls/star-stacker"
readme = "README.org"
keywords = ["computer-vision", "image-processing", "astrophotography", "opencv"]

[lib]
name = "star_stacker_lib"
path = "src/lib.rs"

[[bin]]
name = "star-stacker"
path = "src/main.rs"

[dependencies]
rawloader="0.37.0"
tiff = "*"
opencv = "0.60"
clap = "*"
glob = "0.3.0"
rayon = "1.5.1"
log = "0.4.14"
env_logger = "0.9.0"

[features]
opencvx = []
