[package]
name = "start-stacker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawloader="0.37.0"
tiff = "*"
opencv = "0.60"
clap = "*"
glob = "0.3.0"
rayon = "1.5.1"
log = "0.4.14"
env_logger = "0.9.0"
ndarray = "0.14"
ndarray-linalg = {version = "0.13", features = ["openblas-system"]}
